# oop_labs

./: .gitignore
lab_1/: CMakeLists.txt  max_n.cpp  max_n.h  task01.cpp  tests01.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/include/: decarray.h
lab_2/src/: decarray.cpp
lab_2/test/: tests.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/include/: array.h  figure.h  hexagon.h  octagon.h  point.h  triangle.h
lab_3/src/: array.cpp  generator.cpp  hexagon.cpp  octagon.cpp  point.cpp  triangle.cpp
lab_3/test/: test.cpp
lab_4/: main.cpp
lab_4/header/: hexagon.h  octagon.h  triangle.h
lab_4/src/: hexagon-src.h  octagon-src.h  triangle-src.h
lab_4/test/: test.cpp
lab_5/: CMakeLists.txt  main.cpp
lab_5/include/: allocator.h  node.h  queue.h
lab_5/test/: test.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/include/: Dragon.h  Factory.h  FightObserver.h  NPC.h  Pegasus.h  Visitor.h  WanderingKnight.h
lab_6/src/: Dragon.cpp  NPC.cpp  Pegasus.cpp  WanderingKnight.cpp
lab_6/test/: test.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/include/: Pegasus.h  Visitor.h  WanderingKnight.h  dragon.h  npc.h
lab_7/src/: Pegasus.cpp  WanderingKnight.cpp  dragon.cpp
lab_7/test/: test.cpp
